my first commit

--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
 
     <nav class="navbar bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand">Programming contests</a>
+            <a href="index.html" class="navbar-brand">Programming contests</a>
             <a href="bloomberg.html" class="navbar-brand">bloomberg</a>
+            <a href="pexels.html" class="navbar-brand">pexels</a>
+            <a href="photos.html" class="navbar-brand">stocks photos and videos</a>
             <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
