--- a/photos.html
+++ b/photos.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
     <link rel="stylesheet" href="index.css">
     <!-- bootstrap 5.1 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -21,17 +20,13 @@
 
     <nav class="navbar bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">Programming contests</a>
+            <a href="index.html" class="navbar-brand">Programming contests</a>
             <a href="bloomberg.html" class="navbar-brand">bloomberg</a>
             <a href="pexels.html" class="navbar-brand">pexels</a>
             <a href="photos.html" class="navbar-brand">stocks photos and videos</a>
             <form class="d-flex" role="search">
-                <input id="mySearch" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="button" onclick="myFunction()">Search</button>
-                <p id="demo"></p>
-                <script>
-                    
-                </script>
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit" onclick="myFunction()">Search</button>
             </form>
         </div>
     </nav>
@@ -56,7 +51,7 @@
     </div>
 
     <!-- bootstrap 5.1 -->
-    <script src="bloomberg.js"></script>
+    <script src="photos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
