--- a/photos.html
+++ b/photos.html
@@ -26,7 +26,8 @@
             <a href="photos.html" class="navbar-brand">stocks photos and videos</a>
             <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit" onclick="myFunction()">Search</button>
+                <button class="btn btn-outline-success" type="submit" onclick="stockPhotos()">Search</button>
+                <p id="demo"></p>
             </form>
         </div>
     </nav>
