--- a/pexels.html
+++ b/pexels.html
@@ -37,7 +37,9 @@
             <h1 class="display-4">Contest's</h1>
             <p class="lead">Get all information related to all types of contest going on all over the world.</p>
             <hr class="my-4">
-            <p>Competitive programming is a mind sport usually held over the Internet or a local network, involving participants trying to program according to provided specifications. Contestants are referred to as sport programmers.</p>
+            <p>Competitive programming is a mind sport usually held over the Internet or a local network, involving
+                participants trying to program according to provided specifications. Contestants are referred to as
+                sport programmers.</p>
             <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
         </div>
 
@@ -45,6 +47,16 @@
         <div id="cardContainer" class="row">
 
         </div>
+
+        <nav aria-label="Page navigation example">
+            <ul class="pagination">
+                <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item"><a class="page-link" href="#" onclick="nextPage()">Next</a></li>
+            </ul>
+        </nav>
 
     </div>
 
