--- a/photos.html
+++ b/photos.html
@@ -25,8 +25,8 @@
             <a href="pexels.html" class="navbar-brand">pexels</a>
             <a href="photos.html" class="navbar-brand">stocks photos and videos</a>
             <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit" onclick="stockPhotos()">Search</button>
+                <input id="search" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="button" onclick="stockPhotos()">Search</button>
                 <p id="demo"></p>
             </form>
         </div>
